Gp: fix whitespace gap between elements

--- a/src/assets/less/pages/globalping.less
+++ b/src/assets/less/pages/globalping.less
@@ -1111,7 +1111,6 @@
 			width: 100%;
 
 			@media (min-width: @screen-sm-min) {
-				margin-top: 100px;
 				max-width: 1272px;
 				padding: 100px 24px;
 				border-radius: 8px;
